# biconote

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: error.rs  gemini.rs  gemini_tests.rs  mod.rs  slack.rs  slack_tests.rs
src/components/editor/: EditorArea.tsx  TabBar.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: LunchImageCard.tsx  LunchPanel.tsx
src/components/titlebar/: TitleBar.tsx
src/hooks/: useEditor.ts  useLunchMenu.ts  useSettings.ts
src/hooks/editor/: editorStorage.ts  tabUtils.ts  useTabAutosave.ts
src/hooks/lunch/: cacheStore.ts  weekUtils.ts
src/services/: tauriCommands.ts
src/types/: index.ts
src/utils/: dateUtils.ts
